--- a/skin/classic/src/main/sass/_common.scss
+++ b/skin/classic/src/main/sass/_common.scss
@@ -699,3 +699,8 @@ td.info {
   right: 10px;
   top: 5px;
 }
+
+
+.filter {
+  margin-bottom: 10px;
+}
